# crux

./: .env.example  .gitignore  Dockerfile  README.md  double_crux.py  fly.toml  package-lock.json  package.json
.github/workflows/: deploy.yml
api/: Dockerfile  README.md  requirements.txt  setup.cfg
api/app/: app.py  crux.py  models.py  setup.cfg
app/: root.tsx
app/routes/: $room.create.tsx  $room.pair.tsx  $room.tsx  create.tsx  index.test.tsx  index.tsx  pair.test.ts  pair.test.tsx  pair.ts  pair.tsx  ready.tsx  room.$roomId.tsx  room.$roomName.$person.tsx  room.$roomName.tsx  room.tsx
app/utils/: adjectives.server.ts  algorithm.ts  animals.ts  redis.server.ts  utils.server.test.ts  utils.server.ts  utils.test.ts  utils.ts
cypress/e2e/: smoke.ts
