[metadata]
name = crux

[options]
packages = app
python_requires = >= 3.9

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:isort]
profile=black
known_first_party = oxeo
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
